# Integrating_ML-Planning_ROS

bpl_bravo_description_real/: CMakeLists.txt  README.md  package.xml
bpl_bravo_description_real/launch/: view_bravo_5.launch  view_bravo_7.launch
bpl_bravo_description_real/rviz/: rviz.rviz
bpl_bravo_description_real/urdf/: bravo_5.urdf.xacro  bravo_5_example.urdf  bravo_5_example.urdf.xacro  bravo_7.gazebo.xacro  bravo_7.urdf.xacro  bravo_7_example.urdf  bravo_7_example.urdf.xacro  depth_cam.urdf.xacro  model.urdf  simplify_urdf.py  testbed_macros.xacro  trisect_cam.urdf.xacro
bpl_bravo_moveit_config/bpl_bravo_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
bpl_bravo_moveit_config/bravo_7_example_arm_ikfast_plugin/: CMakeLists.txt  bravo_7_example_arm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
bravo_arm_sw/: .drone.yml  CMakeLists.txt  README.md  bravo_arm_sw.repos  package.xml
bravo_arm_sw/config/: bravo.rviz
bravo_arm_sw/docker/: Dockerfile
bravo_arm_sw/launch/: bravo_arm.launch  cam_pose.launch  trisect_pose.launch
cl_tsgrasp/config/: testbed.rviz
cl_tsgrasp/launch/: testbed_grasp_demo.launch
cl_tsgrasp/nodes/: grasp_pose_to_marker_array.py  motion.py  predict_grasps.py  states.py
hacky_utils/: CMakeLists.txt  package.xml
hacky_utils/config/: rviz.rviz
hacky_utils/launch/: calibrate_trisect_realsense.launch  realsense_start.launch
hacky_utils/src/: publish_tf_from_topic.py
libbpl_protocol/: .drone.yml  .gitignore  CMakeLists.txt  Doxyfile  README.md  package.xml
libbpl_protocol/examples/: query_actuator_async.cpp  query_actuator_sync.cpp  query_actuator_sync_client.cpp
libbpl_protocol/src/: async_client.cpp  bpl_client_common.cpp  cobs.cpp  cobs.h  crc.h  io_service_thread.cpp  packet.cpp  packet_types.cpp  sync_client.cpp
libbpl_protocol/test/: autogen_test_data.h  make_test_data.py  old_cobs.c  old_cobs.h  test_cobs.cpp  test_data.h  test_libbpl_protocol.cpp  test_main.cpp
pr2_sbpl_interface_config/config/: kinematics.yaml  pr2.mprim  sbpl_planning.yaml
pr2_sbpl_interface_config/launch/: sbpl_planning.launch.xml
rsa_bravo_driver/: CMakeLists.txt  README.md  package.xml
rsa_bravo_gazebo/: CMakeLists.txt  README.md  package.xml
rsa_bravo_gazebo/config/: bravo.rviz  gazebo_ros_control_params.yaml  ros_controllers.yaml
rsa_bravo_msgs/: CMakeLists.txt  README.md  package.xml
smpl/smpl/: CMakeLists.txt
testbed_sw/: README.md
testbed_sw/testbed_bravo_description/: CMakeLists.txt  package.xml
testbed_sw/testbed_bravo_description/launch/: gazebo.launch  rviz.launch
testbed_sw/testbed_bravo_description/rviz/: testbed.rviz
testbed_sw/testbed_bravo_description/urdf/: testbed_bravo.xacro
(+193 files in other folders)
