<?xml version="1.0"?>
<package format="2">
  <name>rsa_bravo_msgs</name>
  <version>0.0.0</version>
  <description>The testbed_msgs package</description>

  <maintainer email="playert@oregonstate.edu">Tim Player</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/testbed_msgs</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
